# masskit

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE.md  MANIFEST.in  README.md  arrow_structs.html  arrow_structs.ipynb  demo_peptide.html  demo_peptide.ipynb  examine_predictions.html  examine_predictions.ipynb  genindex.html  index.html  ion_analysis.html  ion_analysis.ipynb  lib_demo.html  masskit.data_specs.html  masskit.html  masskit.peptide.html  masskit.rst  masskit.small_molecule.html  masskit.spectrum.html  masskit.spectrum.rst  masskit.utils.html  modules.html  notes.html  objects.inv  py-modindex.html  pyproject.toml  readme_development.md  recipes.html  search.html  search_prototype.html  search_prototype.ipynb  searchindex.js  setup.cfg  setup.py  spectra.html  test_arrow.html  (+1 more)
_build/: .buildinfo  demo_peptide.html  examine_predictions.html  examine_predictions.ipynb  genindex.html  index.html  ion_analysis.html  masskit.data_specs.html  masskit.html  masskit.peptide.html  masskit.small_molecule.html  masskit.spectrum.html  masskit.utils.html  masskit.utils.textalloc.html  modules.html  objects.inv  py-modindex.html  recipes.html  search.html  search_prototype.html  searchindex.js  spectra.html  spectra.ipynb
_build/.doctrees/: arrow_structs.doctree  demo_peptide.doctree  environment.pickle  examine_predictions.doctree  index.doctree  ion_analysis.doctree  lib_demo.doctree  masskit.data_specs.doctree  masskit.doctree  masskit.peptide.doctree  masskit.small_molecule.doctree  masskit.spectrum.doctree  masskit.utils.doctree  masskit.utils.textalloc.doctree  modules.doctree  notes.doctree  recipes.doctree  search_prototype.doctree  spectra.doctree  test_arrow.doctree
_build/_sources/: arrow_structs.ipynb.txt  demo_peptide.ipynb.txt  index.rst.txt  lib_demo.ipynb.txt  masskit.utils.rst.txt
_sources/: demo_peptide.ipynb.txt  examine_predictions.ipynb.txt  index.rst.txt  lib_demo.ipynb.txt  notes.md.txt  recipes.md.txt  search_prototype.ipynb.txt  test_arrow.ipynb.txt
_sources/sources/: masskit.apps.process.libraries.conf.hydra.help.rst.txt  masskit.apps.process.libraries.conf.hydra.rst.txt  masskit.apps.process.libraries.conf.rst.txt  masskit.apps.process.libraries.rst.txt  masskit.apps.process.mols.conf.hydra.help.rst.txt  masskit.apps.process.mols.conf.hydra.rst.txt  masskit.apps.process.mols.conf.rst.txt  masskit.apps.process.mols.rst.txt  masskit.apps.process.rst.txt  masskit.apps.rst.txt  masskit.apps.ui.pqview.rst.txt  masskit.apps.ui.rst.txt  masskit.conf.conversion.arrow.rst.txt  masskit.conf.conversion.csv.rst.txt  masskit.conf.conversion.mgf.rst.txt  masskit.conf.conversion.msp.rst.txt  masskit.conf.conversion.parquet.rst.txt  masskit.conf.conversion.rst.txt  masskit.conf.conversion.sdf.rst.txt  masskit.conf.rst.txt  masskit.data_specs.rst.txt  masskit.peptide.rst.txt  masskit.rst.txt  masskit.small_molecule.rst.txt  masskit.spectra.rst.txt  masskit.spectrum.rst.txt  masskit.test_fixtures.rst.txt  masskit.utils.rst.txt  masskit.utils.textalloc.rst.txt  modules.rst.txt
_static/: documentation_options.js
apps/names/: README.md  setup.py
apps/ri_service/: .gitignore  README.md  dev.env  gitlab-ci.yml  model_79  model_99  nist_service  nist_service.ini  nist_service.service  ri_service.py  smiles2file.py  smiles2file.spec
apps/search/: compare_searches.py  spectra_compare.py
apps/tandem/: README.md  setup.py
ci/: README.md  build_massspec_conda.bat  build_massspec_conda.sh  build_massspec_conda_wrapper.bat  init_arrow_env.bat  init_arrow_env.sh  init_doc_env.sh  linux_arrow_env.yml  test_massspec_conda.bat  test_massspec_conda.sh  test_massspec_conda_wrapper.bat
conda/: meta.yaml
docs/: arrow_structs.py
environments/: base_packages.txt  cuda_packages.txt  init_masskit.bat  init_masskit.sh  init_msml.sh  ml_packages.txt  nocuda_packages.txt
masskit_ext/: CMakeLists.txt  CMakePresets.json  pyproject.toml  readme_development.md  vcpkg.json
masskit_ext/cmake/: FindPyArrow.cmake
masskit_ext/examples/cpp/: CMakeLists.txt
masskit_ext/examples/python/: intersect_example.py  search_example.py  test_cosine.py
masskit_ext/src/: CMakeLists.txt  ext.hpp  index.cpp  masskit_ext.cpp  masskit_ext.h  pybind_module.cpp
masskit_ext/src/search/: search.cpp  search.hpp  test_search.cpp  udf_example.cpp
notebooks/: cho_search.ipynb  notoriety.ipynb
sources/: masskit.apps.html  masskit.apps.process.html  masskit.apps.process.libraries.conf.html  masskit.apps.process.libraries.conf.hydra.help.html  masskit.apps.process.libraries.conf.hydra.html  masskit.apps.process.libraries.html  masskit.apps.process.mols.conf.html  masskit.apps.process.mols.conf.hydra.help.html  masskit.apps.process.mols.conf.hydra.html  masskit.apps.process.mols.html  masskit.apps.ui.html  masskit.apps.ui.pqview.html  masskit.conf.conversion.arrow.html  masskit.conf.conversion.csv.html  masskit.conf.conversion.html  masskit.conf.conversion.mgf.html  masskit.conf.conversion.msp.html  masskit.conf.conversion.parquet.html  masskit.conf.conversion.sdf.html  masskit.conf.html  masskit.data_specs.html  masskit.html  masskit.peptide.html  masskit.small_molecule.html  masskit.spectra.html  masskit.spectrum.html  masskit.test_fixtures.html  masskit.utils.html  masskit.utils.textalloc.html  modules.html
src/masskit/: __init__.py  accumulator.py  config.py  (+2 more)
src/masskit/apps/search/: CMakeLists.txt  generate_pair_bitvec.cpp
src/masskit_ext/: CMakeLists.txt  README.md  vcpkg.json
src/masskit_ext/cmake/: FindPyArrow.cmake
src/masskit_ext/examples/: examples.ipynb
src/masskit_ext/examples/cpp/: CMakeLists.txt
src/masskit_ext/examples/python/: intersect_example.py  test_cosine.py
src/masskit_ext/src/: CMakeLists.txt  fingerprints.cpp  masskit_ext.h
src/masskit_ext/src/search/: CMakeLists.txt  search.cpp  search.hpp  test_search.cpp
src/massspec_ext/search/: CMakeLists.txt  search.cpp  search.hpp
src/massspec_ext/src/: CMakeLists.txt  caster.hpp  ext.cpp  pybind_module.cpp
src/massspec_ext/src/search/: CMakeLists.txt  test_search.cpp  udf_example.cpp
tests/: conftest.py
(+346 files in other folders)
