[metadata]
name = masskit
# version = attr: masskit.VERSION # Get it from the module
version = 1.1.2
author=Lewis Geer, Douglas Slotta
author_email=lewis.geer@nist.gov
description = Utilities for handling mass spec data
# long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = mass spectrometry, science
license = Public Domain
classifiers =
    Programming Language :: Python :: 3


# Using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
include_package_data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src


[options.package_data]
* = *.yaml

[options.entry_points]
console_scripts =
    rewrite_sdf = masskit.apps.process.libraries.rewrite_sdf:rewrite_sdf_app
    batch_converter = masskit.apps.process.libraries.batch_converter:batch_converter_app
    fasta2peptides = masskit.apps.process.libraries.fasta2peptides:fasta2peptides_app
    shortest_path = masskit.apps.process.mols.shortest_path:path_generator_app
    react = masskit.apps.process.mols.reactor:reactor_app
    transform_table = masskit.apps.process.libraries.transform_table:transform_table_app
    pubchem_links = masskit.apps.process.libraries.pubchem_links:pubchem_links_app
    update_sets = masskit.apps.process.libraries.update_sets:update_sets_app
    pqview = masskit.apps.ui.pqview:main
